--- a/html/q-brown.css
+++ b/html/q-brown.css
@@ -62,7 +62,7 @@ h1, .result {
 @media screen {
   html {
      color:black;
-     background:#d8d0c8;
+     background-color:#d8d0c8;
      }
    
   body { 
@@ -71,7 +71,7 @@ h1, .result {
 
   h1, .result { 
      color:#ffffdd;
-     background:#605030;
+     background-color:#605030;
      text-align:center;
      font-weight:bold;
      border:12px ridge;
@@ -82,7 +82,7 @@ h1, .result {
 
   .hint, .assessment { 
      color:#ffffdd;
-     background:#605030;
+     background-color:#605030;
      font-weight:bold;
      border:12px ridge;
      border-color:#605030;
@@ -93,21 +93,21 @@ h1, .result {
   
   .error {
      color:red;
-     background:transparent;
+     background-color:transparent;
      }
 
   .question { 
      color:#000088;
-     background:transparent;
+     background-color:transparent;
      }
 
   .answer input {
      color:black;
-     background:#d8d0c8;
+     background-color:#d8d0c8;
      }
 
   .correct {
-     background:#a8a098;
+     background-color:#a8a098;
      color:black;
      }
 
@@ -119,7 +119,7 @@ h1, .result {
      
   .buttons input {
      color:#ffffdd;
-     background:#605030;
+     background-color:#605030;
      }
 
   .made {
