--- a/html/q-school.css
+++ b/html/q-school.css
@@ -18,7 +18,6 @@ h1 {
 
 .result { 
      text-align:center;
-     font-style:italic;
      font-weight:bold;
      font-size:larger;
      }
@@ -28,14 +27,12 @@ h1 {
 .comment {
      clear:both;
      font-family:sans-serif;
-     font-style:italic;
      }
 
 #metadata, .hint {
      margin-top:1ex;
      padding:.5ex;
      font-family:sans-serif;
-     font-style:italic;
      }
 
 .question { 
@@ -63,13 +60,20 @@ h1 {
      text-align:center;
      }
 
+.error {
+     text-align:center;
+     font-weight:bold;
+     font-style:italic;
+     font-size:larger;
+     }
+
 .buttons { 
      margin-top:2em;
      margin-bottom:2em;
      text-align:center;
      }
 
-  .made {
+.made {
      font-family:sans-serif;
      font-size:x-small;
      text-align:right;
@@ -90,13 +94,9 @@ h1 {
   .error {
      color:red;
      background-color:transparent;
-     text-align:center;
-     font-weight:bold;
-     font-style:italic;
-     font-size:larger;
      }
 
-  #metadata, .hint, .assessment {
+  #metadata, .comment, .hint, .assessment {
      color:black;
      background-color:#eee;
      border-color:#eee;
