--- a/html/q-brown.css
+++ b/html/q-brown.css
@@ -1,10 +1,10 @@
 /* akfquiz - styles for brown theme */
 /* this file is in the public domain */
 
-/* last revision for AKFQuiz 4.1.2 */
+/* last revision for AKFQuiz 4.3.2 */
 
 /* import special styles for printig: */
-@import url(q-print.css) print;
+@import url(q-print.css);
 
 /* common to all media */
 h1, .result { 
@@ -70,23 +70,21 @@ h1, .result {
      }
 
   h1, .result { 
-     color:#ffffdd;
-     background-color:#605030;
-     text-align:center;
-     font-weight:bold;
-     border:12px ridge;
-     border-color:#605030;
+     border:thick outset;
      padding:12px;
      margin:1em 15%;
-     }
-
-  .hint, .assessment { 
      color:#ffffdd;
      background-color:#605030;
-     font-weight:bold;
-     border:12px ridge;
      border-color:#605030;
+     }
+
+  .hint, .assessment {
+     border:thick inset;
+     font-weight:bold;
      padding:1ex;
+     color:#ffffdd;
+     background-color:#605030;
+     border-color:#605030;
      }
 
   .resultlink, .home { text-align:center; }
@@ -120,11 +118,5 @@ h1, .result {
   .buttons input {
      color:#ffffdd;
      background-color:#605030;
-     }
-
-  .made {
-     font-family:sans-serif;
-     font-size:x-small;
-     text-align:right;
      }
 }
